# ai-inference-gateway

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  flake.nix  garnix.nix  pyproject.toml  pytest.ini
.github/workflows/: garnix.yml
docs/plans/: 2026-04-18-hybrid-search-upgrades.md
kubernetes/: module.nix
nix/: config-assertions.nix  config-backend.nix  config-networking.nix  default.nix  gateway.nix  health-monitor.nix  monitor.nix  options.nix  qdrant.nix  redis-cache.nix  router.nix  shell.nix
nix/auth/: default.nix  tailscale.nix
src/: agent_search.py  audio_handler.py  category_router.py  claude_client.py  config.py  contexts.py  dependencies.py  files.py  gpu_scheduler.py  hermes_integration.py  hybrid_search.py  main.py  mcp_broker.py  mcp_cache.py  mcp_http_bridge.py  metrics.py  model_defaults.py  moderation.py  openai_client.py  pii_redactor.py  pipeline.py  query_expansion.py  response_format.py  retry_handler.py  router.py  search_cache.py  searxng_clustering.py  searxng_exports.py  searxng_history.py  searxng_integration.py  searxng_monitoring.py  searxng_rag.py  self_improvement.py  self_improvement_api.py  semantic_cache.py  tts_handler.py  vision.py  vision_handler.py
src/mcp_servers/: __init__.py  searxng_server.py  searxng_settings.yml
src/middleware/: __init__.py  audit_log.py  base.py  circuit_breaker.py  concurrency_limiter.py  load_balancer.py  observability.py  observability_plugin.py  plugin_base.py  rag_injector.py  rate_limiter.py  security_filter.py
src/middleware/knowledge_fabric/: __init__.py  circuit_breaker.py  core.py  fabric.py  fusion.py  metrics.py  routing.py
src/middleware/knowledge_fabric/sources/: __init__.py  brain_source.py  code_search_source.py  rag_source.py  searxng_source.py  web_search_source.py
src/rag/: __init__.py  chunker.py  config.py  embeddings.py  ingestion.py  qdrant_client.py  search.py
src/routes/: admin.py  virtual_keys.py
src/services/: anthropic_service.py  cost_tracker.py  virtual_keys.py
src/utils/: __init__.py  message_utils.py  metrics.py  redis_client.py  tool_utils.py
tests/: conftest.py  requirements-test.txt  run_tests.py  test_circuit_breaker.py  test_config.py  test_fabric_fusion.py  test_fabric_routing.py  test_fabric_sources.py  test_hybrid_search_live.py  test_integration.py  test_knowledge_fabric.py  test_knowledge_fabric_metrics.py  test_load_balancer.py  test_main.py  test_mcp_cache.py  test_metrics.py  test_middleware_base.py  test_moderation.py  test_observability.py  test_pii_redactor.py  test_pipeline.py  test_rate_limiter.py  test_redis_client.py  test_response_format.py  test_security_filter.py
tests/load/: README.md  locustfile.py
