[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-inference-gateway"
version = "2.0.1"
description = "OpenAI-compatible API gateway with intelligent routing, circuit breaker failover, security proxy, RAG, and MCP brokerage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "reverb256" },
]
keywords = ["ai", "gateway", "openai", "fastapi", "llm", "proxy", "rag", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "prometheus-client>=0.19.0",
    "python-multipart>=0.0.6",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "redis>=5.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
# Full install with all backends and features
full = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "anthropic>=0.18.0",
    "sentry-sdk>=1.39.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "lxml>=4.9.0",
    "einops>=0.7.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "pydub>=0.25.0",
]
# TTS support
tts = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "pydub>=0.25.0",
]
# Vision support
vision = [
    "pillow>=10.0.0",
]
# Monitoring
monitoring = [
    "sentry-sdk>=1.39.0",
    "psutil>=5.9.0",
]
# Auth
auth = [
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
]
# Testing
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
]

[project.scripts]
ai-inference-gateway = "ai_inference_gateway.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_inference_gateway*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, may require external services)",
    "slow: Slow tests",
    "asyncio: Async tests",
    "requires_redis: Tests that require Redis service",
    "requires_qdrant: Tests that require Qdrant service",
    "requires_network: Tests that require network access",
]
